@@ -69,7 +69,7 @@ public class OMRSArchiveWriter
             try
             {
                 Class<?>   connectorProviderClass = Class.forName(connectorProviderClassName);
-                Object     potentialConnectorProvider = connectorProviderClass.newInstance();
+                Object     potentialConnectorProvider = connectorProviderClass.getDeclaredConstructor().newInstance();
 
                 ConnectorProvider connectorProvider = (ConnectorProvider)potentialConnectorProvider;
 
@@ -87,7 +87,7 @@ public class OMRSArchiveWriter
                     connectorType.setConnectorProviderClassName(connectorProviderClassName);
                 }
             }
-            catch (Throwable classException)
+            catch (Exception classException)
             {
                 log.error("Bad connectorProviderClassName: " + classException.getMessage());
             }
